--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-wandb==0.17.0
-abctoolkit==0.0.4
+transformers==4.40.0
+numpy==1.26.4
+wandb==0.17.2
+abctoolkit==0.0.5
 samplings==0.1.7
+pyparsing==3.2.1
